--- a/CCS-Uploader/Controllers/Prefs/AccountView.xib
+++ b/CCS-Uploader/Controllers/Prefs/AccountView.xib
@@ -18,18 +18,18 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView autoresizesSubviews="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="158"/>
+            <rect key="frame" x="0.0" y="0.0" width="480" height="151"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <box autoresizesSubviews="NO" title="Login Information" borderType="line" id="5Hr-Te-VQo">
-                    <rect key="frame" x="-3" y="-4" width="486" height="164"/>
+                <box autoresizesSubviews="NO" title="Login Information" borderType="line" titlePosition="noTitle" id="5Hr-Te-VQo">
+                    <rect key="frame" x="-3" y="-4" width="486" height="157"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <view key="contentView">
-                        <rect key="frame" x="1" y="1" width="484" height="148"/>
+                        <rect key="frame" x="1" y="1" width="484" height="155"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Upk-4Y-YK2">
-                                <rect key="frame" x="83" y="121" width="116" height="17"/>
+                                <rect key="frame" x="83" y="124" width="116" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Default service:" id="sLJ-Uc-4fc">
                                     <font key="font" metaFont="system"/>
@@ -38,7 +38,7 @@
                                 </textFieldCell>
                             </textField>
                             <popUpButton verticalHuggingPriority="750" id="Rjh-AG-Be7">
-                                <rect key="frame" x="203" y="116" width="199" height="26"/>
+                                <rect key="frame" x="203" y="119" width="199" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="SIz-bP-Ygl">
                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -59,7 +59,7 @@
                                 </connections>
                             </popUpButton>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="UNE-R6-yZu">
-                                <rect key="frame" x="83" y="95" width="116" height="17"/>
+                                <rect key="frame" x="83" y="98" width="116" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Username:" id="HWi-ZW-Wrq">
                                     <font key="font" metaFont="system"/>
@@ -68,7 +68,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="1L1-Bi-YXe">
-                                <rect key="frame" x="83" y="69" width="116" height="17"/>
+                                <rect key="frame" x="83" y="72" width="116" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Password:" id="YJb-it-nR3">
                                     <font key="font" metaFont="system"/>
@@ -77,7 +77,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" id="xni-1Q-SAw">
-                                <rect key="frame" x="205" y="92" width="194" height="22"/>
+                                <rect key="frame" x="205" y="95" width="194" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="2k2-Qg-wNi">
                                     <font key="font" metaFont="system"/>
@@ -89,7 +89,7 @@
                                 </connections>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="gZy-pW-S0j">
-                                <rect key="frame" x="83" y="42" width="116" height="17"/>
+                                <rect key="frame" x="83" y="45" width="116" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="CORE domain:" id="KZJ-ob-jS5">
                                     <font key="font" metaFont="system"/>
@@ -98,7 +98,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" id="fS6-ix-PY7">
-                                <rect key="frame" x="205" y="39" width="194" height="22"/>
+                                <rect key="frame" x="205" y="42" width="261" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="t7V-BB-L1O">
                                     <font key="font" metaFont="system"/>
@@ -110,7 +110,7 @@
                                 </connections>
                             </textField>
                             <secureTextField verticalHuggingPriority="750" id="hN4-cW-Z0N">
-                                <rect key="frame" x="205" y="66" width="194" height="22"/>
+                                <rect key="frame" x="205" y="69" width="194" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" usesSingleLineMode="YES" id="c1J-lh-leX">
                                     <font key="font" metaFont="system"/>
@@ -125,7 +125,7 @@
                                 </connections>
                             </secureTextField>
                             <button verticalHuggingPriority="750" id="d2d-xQ-EFE">
-                                <rect key="frame" x="199" y="4" width="206" height="32"/>
+                                <rect key="frame" x="199" y="7" width="206" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="push" title="Save Credentials" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="noy-dC-iDy">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
