--- a/CCS-Uploader/Controllers/Wizard/LoginView.xib
+++ b/CCS-Uploader/Controllers/Wizard/LoginView.xib
@@ -8,6 +8,8 @@
         <customObject id="-2" userLabel="File's Owner" customClass="LoginViewController">
             <connections>
                 <outlet property="btnService" destination="WhP-Sx-gSU" id="w8C-VB-iRh"/>
+                <outlet property="lblCoreURL" destination="fDg-Mr-QbN" id="phi-iY-D4l"/>
+                <outlet property="txtCoreURL" destination="KQZ-pA-SPA" id="AZI-dP-tBP"/>
                 <outlet property="txtEventNumber" destination="NB4-0A-ney" id="dvT-tL-fXS"/>
                 <outlet property="txtPassword" destination="z4N-zG-P1A" id="t6d-zT-q4s"/>
                 <outlet property="txtUsername" destination="Tw9-S0-Bjj" id="lm4-b3-VuA"/>
@@ -17,11 +19,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView id="1">
-            <rect key="frame" x="0.0" y="0.0" width="512" height="131"/>
+            <rect key="frame" x="0.0" y="0.0" width="512" height="164"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tw9-S0-Bjj">
-                    <rect key="frame" x="243" y="71" width="160" height="22"/>
+                    <rect key="frame" x="243" y="104" width="160" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="n3g-15-kVx">
                         <font key="font" metaFont="system"/>
@@ -33,7 +35,7 @@
                     </connections>
                 </textField>
                 <secureTextField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="z4N-zG-P1A">
-                    <rect key="frame" x="243" y="39" width="160" height="22"/>
+                    <rect key="frame" x="243" y="72" width="160" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" usesSingleLineMode="YES" id="Ewg-bY-ovE">
                         <font key="font" metaFont="system"/>
@@ -44,11 +46,11 @@
                         </allowedInputSourceLocales>
                     </secureTextFieldCell>
                     <connections>
-                        <outlet property="nextKeyView" destination="NB4-0A-ney" id="vTn-O4-p81"/>
+                        <outlet property="nextKeyView" destination="KQZ-pA-SPA" id="Hs7-ZY-hw5"/>
                     </connections>
                 </secureTextField>
                 <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NB4-0A-ney">
-                    <rect key="frame" x="243" y="7" width="160" height="22"/>
+                    <rect key="frame" x="243" y="8" width="160" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="3kU-gf-klp">
                         <font key="font" metaFont="system"/>
@@ -60,7 +62,7 @@
                     </connections>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bOz-Sc-3cc">
-                    <rect key="frame" x="170" y="74" width="71" height="17"/>
+                    <rect key="frame" x="170" y="107" width="71" height="17"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Username:" id="ht9-LW-cHv">
                         <font key="font" metaFont="system"/>
@@ -69,7 +71,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R69-tQ-59q">
-                    <rect key="frame" x="175" y="42" width="66" height="17"/>
+                    <rect key="frame" x="175" y="75" width="66" height="17"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Password:" id="Vcj-Qp-rXf">
                         <font key="font" metaFont="system"/>
@@ -78,7 +80,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Omj-5m-BMy">
-                    <rect key="frame" x="79" y="10" width="162" height="17"/>
+                    <rect key="frame" x="79" y="11" width="162" height="17"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Event Number (optional):" id="wm1-iY-CEy">
                         <font key="font" metaFont="system"/>
@@ -87,7 +89,7 @@
                     </textFieldCell>
                 </textField>
                 <button horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="z5y-pV-dT3">
-                    <rect key="frame" x="409" y="5" width="25" height="25"/>
+                    <rect key="frame" x="409" y="6" width="25" height="25"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="help" bezelStyle="helpButton" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="E1c-uM-XRv">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -98,7 +100,7 @@
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dgk-0K-PLj">
-                    <rect key="frame" x="188" y="104" width="53" height="17"/>
+                    <rect key="frame" x="188" y="137" width="53" height="17"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Service:" id="GG9-Qc-GFH">
                         <font key="font" metaFont="system"/>
@@ -107,7 +109,7 @@
                     </textFieldCell>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WhP-Sx-gSU">
-                    <rect key="frame" x="241" y="99" width="165" height="26"/>
+                    <rect key="frame" x="241" y="132" width="165" height="26"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="59R-jV-2Em">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -123,6 +125,27 @@
                         <action selector="serviceChanged:" target="-2" id="fkf-VF-jzC"/>
                     </connections>
                 </popUpButton>
+                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-pA-SPA">
+                    <rect key="frame" x="243" y="40" width="249" height="22"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="cOl-ZB-BiQ">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                    <connections>
+                        <outlet property="nextKeyView" destination="NB4-0A-ney" id="ka7-CK-9iX"/>
+                    </connections>
+                </textField>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fDg-Mr-QbN">
+                    <rect key="frame" x="169" y="43" width="71" height="17"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="CORE URL:" id="AND-tp-lkK">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
             </subviews>
         </customView>
     </objects>
