--- a/CCS-Uploader/Controllers/Wizard/BrowseView.xib
+++ b/CCS-Uploader/Controllers/Wizard/BrowseView.xib
@@ -11,6 +11,7 @@
                 <outlet property="advancedOptionsPopover" destination="Ev0-cL-VcC" id="aUQ-CH-x6i"/>
                 <outlet property="chkAutoNumberFrames" destination="yi3-c7-3TE" id="BsY-2L-hGx"/>
                 <outlet property="chkAutoNumberRolls" destination="gyN-Yg-Rzh" id="Y0W-1a-vsf"/>
+                <outlet property="chkPutImagesInCurrentlySelectedRoll" destination="ht2-c3-hbU" id="MAZ-QB-01x"/>
                 <outlet property="includeNewlyAddedImagesSheet" destination="rMF-xz-va9" id="Coe-iE-tWO"/>
                 <outlet property="tblRolls" destination="Eum-26-wUS" id="Cjw-xt-uA5"/>
                 <outlet property="txtNewFiles" destination="etA-Be-cCt" id="LaC-yF-YDb"/>
@@ -500,11 +501,11 @@
                     <rect key="frame" x="20" y="20" width="799" height="434"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <clipView key="contentView" copiesOnScroll="NO" id="djt-Si-TZI">
-                        <rect key="frame" x="1" y="1" width="797" height="432"/>
+                        <rect key="frame" x="1" y="1" width="782" height="432"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <ikImageBrowserView autoresizesSubviews="NO" zoomValue="0.38659605383872986" id="4Ng-qR-G4T">
-                                <rect key="frame" x="0.0" y="0.0" width="797" height="432"/>
+                                <rect key="frame" x="0.0" y="0.0" width="782" height="432"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <autoresizingMask key="contentResizingMask" heightSizable="YES"/>
                                 <size key="cellSize" width="99" height="99"/>
@@ -516,7 +517,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Hjm-VN-IIq">
-                        <rect key="frame" x="782" y="1" width="16" height="432"/>
+                        <rect key="frame" x="783" y="1" width="15" height="432"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                 </scrollView>
@@ -566,17 +567,17 @@
                         <rect key="frame" x="20" y="53" width="506" height="184"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <clipView key="contentView" id="1IM-l6-kYI">
-                            <rect key="frame" x="1" y="1" width="504" height="182"/>
+                            <rect key="frame" x="1" y="1" width="489" height="182"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView editable="NO" importsGraphics="NO" richText="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="etA-Be-cCt">
-                                    <rect key="frame" x="0.0" y="0.0" width="504" height="182"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="489" height="182"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="504" height="182"/>
+                                    <size key="minSize" width="489" height="182"/>
                                     <size key="maxSize" width="506" height="10000000"/>
                                     <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="504" height="182"/>
+                                    <size key="minSize" width="489" height="182"/>
                                     <size key="maxSize" width="506" height="10000000"/>
                                 </textView>
                             </subviews>
@@ -587,7 +588,7 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="bK5-gY-JCp">
-                            <rect key="frame" x="489" y="1" width="16" height="182"/>
+                            <rect key="frame" x="490" y="1" width="15" height="182"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
