--- a/CCS-Uploader/Controllers/MainWindow.xib
+++ b/CCS-Uploader/Controllers/MainWindow.xib
@@ -58,7 +58,7 @@
                                                 <tableViewGridLines key="gridStyleMask" dashed="YES"/>
                                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                 <tableColumns>
-                                                    <tableColumn identifier="Event" width="317.98046875" minWidth="40" maxWidth="1000" id="MvX-4s-n6U">
+                                                    <tableColumn identifier="Event" width="283.46484375" minWidth="40" maxWidth="1000" id="MvX-4s-n6U">
                                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Event">
                                                             <font key="font" metaFont="smallSystem"/>
                                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -71,11 +71,11 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <tableCellView id="Add-JN-CTy">
-                                                                <rect key="frame" x="1" y="1" width="318" height="17"/>
+                                                                <rect key="frame" x="1" y="1" width="283" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
                                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mFK-Yw-dUm">
-                                                                        <rect key="frame" x="1" y="-1" width="316" height="17"/>
+                                                                        <rect key="frame" x="1" y="-1" width="281" height="17"/>
                                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="3EK-Yz-LrP">
                                                                             <font key="font" size="11" name="LucidaGrande"/>
@@ -90,7 +90,7 @@
                                                             </tableCellView>
                                                         </prototypeCellViews>
                                                     </tableColumn>
-                                                    <tableColumn identifier="Status" width="139.0390625" minWidth="40" maxWidth="1000" id="qwj-2g-8Gt">
+                                                    <tableColumn identifier="Status" width="213.59375" minWidth="40" maxWidth="1000" id="qwj-2g-8Gt">
                                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Status">
                                                             <font key="font" size="11" name="LucidaGrande"/>
                                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -103,11 +103,11 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <tableCellView id="4Za-BN-8uh">
-                                                                <rect key="frame" x="322" y="1" width="139" height="17"/>
+                                                                <rect key="frame" x="287" y="1" width="214" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
                                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZfA-D6-wSg">
-                                                                        <rect key="frame" x="0.0" y="-1" width="139" height="17"/>
+                                                                        <rect key="frame" x="0.0" y="-1" width="214" height="17"/>
                                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="5ll-R9-UT7">
                                                                             <font key="font" size="11" name="LucidaGrande"/>
@@ -133,7 +133,7 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <tableCellView id="oKq-d3-qM2">
-                                                                <rect key="frame" x="464" y="1" width="90" height="17"/>
+                                                                <rect key="frame" x="504" y="1" width="90" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
                                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rEv-ak-sY2">
@@ -163,7 +163,7 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <tableCellView id="FNo-jx-GWg">
-                                                                <rect key="frame" x="557" y="1" width="90" height="17"/>
+                                                                <rect key="frame" x="597" y="1" width="90" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
                                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qEM-Uk-681">
@@ -182,7 +182,7 @@
                                                             </tableCellView>
                                                         </prototypeCellViews>
                                                     </tableColumn>
-                                                    <tableColumn identifier="Date" width="117.27734375" minWidth="10" maxWidth="3.4028234663852886e+38" id="HJA-dy-Cy0">
+                                                    <tableColumn identifier="Date" width="108.71875" minWidth="10" maxWidth="3.4028234663852886e+38" id="HJA-dy-Cy0">
                                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Event Date">
                                                             <font key="font" metaFont="smallSystem"/>
                                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -196,11 +196,11 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <tableCellView id="vb5-9P-99w">
-                                                                <rect key="frame" x="650" y="1" width="117" height="17"/>
+                                                                <rect key="frame" x="690" y="1" width="109" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
                                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cRO-gG-2GG">
-                                                                        <rect key="frame" x="0.0" y="-1" width="117" height="17"/>
+                                                                        <rect key="frame" x="0.0" y="-1" width="109" height="17"/>
                                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="UFk-tN-oho">
                                                                             <font key="font" size="11" name="LucidaGrande"/>
@@ -230,7 +230,7 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <customView id="9PM-Ck-ibN">
-                                                                <rect key="frame" x="770" y="1" width="18" height="21"/>
+                                                                <rect key="frame" x="802" y="1" width="18" height="21"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <subviews>
                                                                     <progressIndicator horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" maxValue="100" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="KOp-N1-4X6">
@@ -255,7 +255,7 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <button verticalHuggingPriority="750" id="J23-YR-5ef">
-                                                                <rect key="frame" x="791" y="1" width="57" height="15"/>
+                                                                <rect key="frame" x="823" y="1" width="57" height="15"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <buttonCell key="cell" type="inline" title="Stop" bezelStyle="inline" alignment="center" borderStyle="border" inset="2" id="awf-Ia-cjf">
                                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -281,7 +281,7 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <button verticalHuggingPriority="750" id="ZkG-5Y-Q7T">
-                                                                <rect key="frame" x="851" y="1" width="57" height="15"/>
+                                                                <rect key="frame" x="883" y="1" width="57" height="15"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <buttonCell key="cell" type="inline" title="Remove" bezelStyle="inline" alignment="center" borderStyle="border" inset="2" id="IVr-Sn-1Qw">
                                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -289,6 +289,29 @@
                                                                     <connections>
                                                                         <action selector="removeTransfer:" target="-2" id="GaO-kJ-HnB"/>
                                                                     </connections>
+                                                                </buttonCell>
+                                                            </button>
+                                                        </prototypeCellViews>
+                                                    </tableColumn>
+                                                    <tableColumn width="66.984375" minWidth="10" maxWidth="3.4028234663852886e+38" id="CbE-Fq-r7a">
+                                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
+                                                            <font key="font" metaFont="smallSystem"/>
+                                                            <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                            <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
+                                                        </tableHeaderCell>
+                                                        <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="QI4-sE-RNL">
+                                                            <font key="font" metaFont="system"/>
+                                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                        </textFieldCell>
+                                                        <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                                        <prototypeCellViews>
+                                                            <button verticalHuggingPriority="750" id="2wD-VK-0ub">
+                                                                <rect key="frame" x="943" y="1" width="67" height="15"/>
+                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                                <buttonCell key="cell" type="inline" title="Errors" bezelStyle="inline" image="NSStatusUnavailable" imagePosition="right" alignment="center" borderStyle="border" inset="2" id="bjS-9m-Y7W">
+                                                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                                    <font key="font" metaFont="smallSystemBold"/>
                                                                 </buttonCell>
                                                             </button>
                                                         </prototypeCellViews>
@@ -534,4 +557,7 @@
             </connections>
         </menu>
     </objects>
+    <resources>
+        <image name="NSStatusUnavailable" width="16" height="16"/>
+    </resources>
 </document>
